==> SenySunny/modbus_rt/example/rt-thread/apm32e103vet6/code/apm32_w5500/drivers/drv_sdio.c <==
#include "board.h"
#include "drv_sdio.h"
#define LOG_TAG             "drv.sdio"
#include <drv_log.h>
#define SDIO_TX_RX_COMPLETE_TIMEOUT_LOOPS    (100000)
#define RTHW_SDIO_LOCK(_sdio)   rt_mutex_take(&_sdio->mutex, RT_WAITING_FOREVER)
#define RTHW_SDIO_UNLOCK(_sdio) rt_mutex_release(&_sdio->mutex);

static rt_uint32_t apm32_sdio_clk_get(struct apm32_sdio *hw_sdio)
{
    return SDIO_CLOCK_FREQ;
}

struct rt_mmcsd_host *sdio_host_create(struct apm32_sdio_des *sdio_des)
{
    struct rt_mmcsd_host *host;
    struct rthw_sdio *sdio = RT_NULL;

    if ((sdio_des == RT_NULL) || (sdio_des->txconfig == RT_NULL) || (sdio_des->rxconfig == RT_NULL))
    {
        LOG_E("L:%d F:%s %s %s %s",
              (sdio_des == RT_NULL ? "sdio_des is NULL" : ""),
              (sdio_des ? (sdio_des->txconfig ? "txconfig is NULL" : "") : ""),
              (sdio_des ? (sdio_des->rxconfig ? "rxconfig is NULL" : "") : "")
             );
        return RT_NULL;
    }

    sdio = rt_malloc(sizeof(struct rthw_sdio));
    if (sdio == RT_NULL)
    {
        LOG_E("L:%d F:%s malloc rthw_sdio fail");
        return RT_NULL;
    }
    rt_memset(sdio, 0, sizeof(struct rthw_sdio));

    host = mmcsd_alloc_host();
    if (host == RT_NULL)
    {
        LOG_E("L:%d F:%s mmcsd alloc host fail");
        rt_free(sdio);
        return RT_NULL;
    }

    rt_memcpy(&sdio->sdio_des, sdio_des, sizeof(struct apm32_sdio_des));
    sdio->sdio_des.hw_sdio = (sdio_des->hw_sdio == RT_NULL ? (struct apm32_sdio *)SDIO_BASE_ADDRESS : sdio_des->hw_sdio);
    sdio->sdio_des.clk_get = (sdio_des->clk_get == RT_NULL ? apm32_sdio_clk_get : sdio_des->clk_get);

    rt_event_init(&sdio->event, "sdio", RT_IPC_FLAG_FIFO);
    rt_mutex_init(&sdio->mutex, "sdio", RT_IPC_FLAG_PRIO);

    /* set host defautl attributes */
    host->ops = &ops;
    host->freq_min = 400 * 1000;
    host->freq_max = SDIO_MAX_FREQ;
    host->valid_ocr = 0X00FFFF80;/* The voltage range supported is 1.65v-3.6v */
#ifndef SDIO_USING_1_BIT
    host->flags = MMCSD_BUSWIDTH_4 | MMCSD_MUTBLKWRITE | MMCSD_SUP_SDIO_IRQ;
#else
    host->flags = MMCSD_MUTBLKWRITE | MMCSD_SUP_SDIO_IRQ;
#endif
    host->max_seg_size = SDIO_BUFF_SIZE;
    host->max_dma_segs = 1;
    host->max_blk_size = 512;
    host->max_blk_count = 512;

    /* link up host and sdio */
    sdio->host = host;
    host->private_data = sdio;

    rthw_sdio_irq_update(host, 1);

    /* ready to change */
    mmcsd_change(host);

    return host;
}

void SD_LowLevel_DMA_TxConfig(uint32_t *src, uint32_t *dst, uint32_t BufferSize)
{
    DMA_Config_T DMA_InitStructure;
    static uint32_t size = 0;

    size += BufferSize * 4;
    sdio_obj.cfg = &sdio_config;
    sdio_obj.dma.handle_tx = sdio_config.dma_tx.Instance;

#if defined (SOC_SERIES_APM32F1) || defined (SOC_SERIES_APM32E1)
    /* clear DMA flag */
    DMA_ClearStatusFlag(DMA2_FLAG_GINT4 | DMA2_FLAG_TC4 | DMA2_FLAG_HT4 | DMA2_FLAG_TERR4);

    /* Disable DMA */
    DMA_Disable(sdio_obj.dma.handle_rx);

    DMA_InitStructure.dir = DMA_DIR_PERIPHERAL_DST;
    DMA_InitStructure.bufferSize = BufferSize;
    DMA_InitStructure.memoryBaseAddr = (uint32_t)src;
    DMA_InitStructure.memoryDataSize = DMA_MEMORY_DATA_SIZE_WOED;
    DMA_InitStructure.memoryInc = DMA_MEMORY_INC_ENABLE;
    DMA_InitStructure.peripheralBaseAddr = (uint32_t)dst;
    DMA_InitStructure.peripheralDataSize = DMA_PERIPHERAL_DATA_SIZE_WOED;
    DMA_InitStructure.peripheralInc = DMA_PERIPHERAL_INC_DISABLE;
    DMA_InitStructure.priority = DMA_PRIORITY_MEDIUM;
    DMA_InitStructure.loopMode = DMA_MODE_NORMAL;
    DMA_InitStructure.M2M = DMA_M2MEN_DISABLE;

    DMA_Config(sdio_obj.dma.handle_tx, &DMA_InitStructure);

    DMA_Enable(sdio_obj.dma.handle_tx);
#elif defined (SOC_SERIES_APM32F4)
    /* Wait DMA can be setting */
    while (DMA_ReadCmdStatus(sdio_obj.dma.handle_tx) != DISABLE);

    /* Clear all DMA intrrupt flag */
    DMA_Reset(sdio_obj.dma.handle_tx);

    DMA_InitStructure.channel = sdio_config.dma_tx.channel;
    DMA_InitStructure.dir = DMA_DIR_MEMORYTOPERIPHERAL;
    DMA_InitStructure.bufferSize = BufferSize;
    DMA_InitStructure.memoryBaseAddr = (uint32_t)src;
    DMA_InitStructure.memoryDataSize = DMA_MEMORY_DATA_SIZE_WORD;
    DMA_InitStructure.memoryInc = DMA_MEMORY_INC_ENABLE;
    DMA_InitStructure.memoryBurst = DMA_MEMORYBURST_INC4;
    DMA_InitStructure.peripheralBaseAddr = (uint32_t)dst;
    DMA_InitStructure.peripheralDataSize = DMA_PERIPHERAL_DATA_SIZE_WORD;
    DMA_InitStructure.peripheralInc = DMA_PERIPHERAL_INC_DISABLE;
    DMA_InitStructure.peripheralBurst = DMA_PERIPHERALBURST_INC4;
    DMA_InitStructure.loopMode = DMA_MODE_NORMAL;
    DMA_InitStructure.priority = DMA_PRIORITY_MEDIUM;
    DMA_InitStructure.fifoMode = DMA_FIFOMODE_ENABLE;
    DMA_InitStructure.fifoThreshold = DMA_FIFOTHRESHOLD_FULL;

    DMA_Config(sdio_obj.dma.handle_tx, &DMA_InitStructure);
    DMA_ConfigFlowController(sdio_obj.dma.handle_tx, DMA_FLOWCTRL_PERIPHERAL);
    DMA_Enable(sdio_obj.dma.handle_tx);
#endif
}

void SD_LowLevel_DMA_RxConfig(uint32_t *src, uint32_t *dst, uint32_t BufferSize)
{
    DMA_Config_T DMA_InitStructure;

    sdio_obj.cfg = &sdio_config;
    sdio_obj.dma.handle_rx = sdio_config.dma_rx.Instance;

#if defined (SOC_SERIES_APM32F1) || defined (SOC_SERIES_APM32E1)
    /* clear DMA flag */
    DMA_ClearStatusFlag(DMA2_FLAG_GINT4 | DMA2_FLAG_TC4 | DMA2_FLAG_HT4 | DMA2_FLAG_TERR4);

    /* Disable DMA */
    DMA_Disable(sdio_obj.dma.handle_rx);

    DMA_InitStructure.dir = DMA_DIR_PERIPHERAL_SRC;
    DMA_InitStructure.bufferSize = BufferSize;
    DMA_InitStructure.memoryBaseAddr = (uint32_t)dst;
    DMA_InitStructure.memoryDataSize = DMA_MEMORY_DATA_SIZE_WOED;
    DMA_InitStructure.memoryInc = DMA_MEMORY_INC_ENABLE;
    DMA_InitStructure.peripheralBaseAddr = (uint32_t)src;
    DMA_InitStructure.peripheralDataSize = DMA_PERIPHERAL_DATA_SIZE_WOED;
    DMA_InitStructure.peripheralInc = DMA_PERIPHERAL_INC_DISABLE;
    DMA_InitStructure.priority = DMA_PRIORITY_MEDIUM;
    DMA_InitStructure.loopMode = DMA_MODE_NORMAL;
    DMA_InitStructure.M2M = DMA_M2MEN_DISABLE;

    DMA_Config(sdio_obj.dma.handle_rx, &DMA_InitStructure);

    DMA_Enable(sdio_obj.dma.handle_rx);
#elif defined (SOC_SERIES_APM32F4)
    /* Wait DMA can be setting */
    while (DMA_ReadCmdStatus(sdio_obj.dma.handle_rx) != DISABLE);

    /* Clear all DMA intrrupt flag */
    DMA_Reset(sdio_obj.dma.handle_rx);

    DMA_InitStructure.channel = sdio_config.dma_rx.channel;
    DMA_InitStructure.dir = DMA_DIR_PERIPHERALTOMEMORY;
    DMA_InitStructure.bufferSize = BufferSize;
    DMA_InitStructure.memoryBaseAddr = (uint32_t)dst;
    DMA_InitStructure.memoryDataSize = DMA_MEMORY_DATA_SIZE_WORD;
    DMA_InitStructure.memoryInc = DMA_MEMORY_INC_ENABLE;
    DMA_InitStructure.memoryBurst = DMA_MEMORYBURST_INC4;
    DMA_InitStructure.peripheralBaseAddr = (uint32_t)src;
    DMA_InitStructure.peripheralDataSize = DMA_PERIPHERAL_DATA_SIZE_WORD;
    DMA_InitStructure.peripheralInc = DMA_PERIPHERAL_INC_DISABLE;
    DMA_InitStructure.peripheralBurst = DMA_PERIPHERALBURST_INC4;
    DMA_InitStructure.loopMode = DMA_MODE_NORMAL;
    DMA_InitStructure.priority = DMA_PRIORITY_MEDIUM;
    DMA_InitStructure.fifoMode = DMA_FIFOMODE_ENABLE;
    DMA_InitStructure.fifoThreshold = DMA_FIFOTHRESHOLD_FULL;

    DMA_Config(sdio_obj.dma.handle_rx, &DMA_InitStructure);
    DMA_ConfigFlowController(sdio_obj.dma.handle_rx, DMA_FLOWCTRL_PERIPHERAL);
    DMA_Enable(sdio_obj.dma.handle_rx);
#endif
}

static rt_uint32_t apm32_sdio_clock_get(struct apm32_sdio *hw_sdio)
{
    return RCM_ReadHCLKFreq();
}

int rt_hw_sdio_init(void)
{
    struct apm32_sdio_des sdio_des;
    struct apm32_sdio_config hsd;

    hsd.Instance = SDCARD_INSTANCE;

    /* enable DMA clock */
#if defined (SOC_SERIES_APM32F1) || defined (SOC_SERIES_APM32E1)
    SET_BIT(RCM->AHBCLKEN, sdio_config.dma_rx.dma_rcm);
#elif defined (SOC_SERIES_APM32F4)
    SET_BIT(RCM->AHB1CLKEN, sdio_config.dma_rx.dma_rcm);
#endif

    NVIC_EnableIRQRequest(SDIO_IRQn, 2, 0);

    /* apm32 sdio gpio init and enable clock */
    extern void apm32_msp_sdio_init(void *Instance);
    apm32_msp_sdio_init((void *)(hsd.Instance));

    sdio_des.clk_get = apm32_sdio_clock_get;
    sdio_des.hw_sdio = (struct apm32_sdio *)SDCARD_INSTANCE;
    sdio_des.rxconfig = DMA_RxConfig;
    sdio_des.txconfig = DMA_TxConfig;

    host = sdio_host_create(&sdio_des);
    if (host == RT_NULL)
    {
        LOG_E("host create fail");
        return -1;
    }

    return 0;
}
